updated tests to fix bugs and adjusted test fixtures to include new data

--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -3,11 +3,13 @@
 one:
   name: MyString
   price: 1
-  image_url: MyString
+  inventory: 1
   description: MyString
+  supplier: one
 
 two:
   name: MyString
   price: 1
-  image_url: MyString
+  inventory: 1
   description: MyString
+  supplier: two
